# college-baseball

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
data/: Ryan_McCarthy_complete_emotion_timeline.json  Ryan_McCarthy_complete_speaker_profiles.json  baseball_analytics_full_research.md  baseball_analytics_research.md  calibration.json  claim_1_verification.md  claim_2_verification.md  claim_3_verification.md  claim_4_verification.md  claim_5_verification.md  claim_6_verification.md  claim_7_verification.md  gap_analysis_v1.md  meeting_analysis_ryan_mccarthy_20260330.md  meeting_analysis_tim_mccarthy_20260330.md  meeting_prep_tim_mccarthy.md  model_v1.json  model_v2.json  multi_season_results.json  online_learner.json  pythagenport_finding.md  roadmap_v1_corrected.md  ryan_call_action_items.md  ryan_call_architecture.md  ryan_call_architecture_xvector.md  ryan_call_coaching.md  ryan_call_coaching_xvector.md  ryan_call_ideas.md  ryan_call_ideas_xvector.md  ryan_call_insights.md  ryan_call_insights_xvector.md  ryan_call_knowledge_graph.json  ryan_followup_message.md  ryan_mccarthy_claims.json  ryan_mccarthy_claims_categorized.json  ryan_mccarthy_claims_corrected.json  ryan_mccarthy_pyannote_diarization.json  ryan_mccarthy_xvector_emotion_timeline.json  ryan_mccarthy_xvector_speaker_profiles.json  ryans_feedback_analysis.md  (+9 more)
docs/: backtest.html  edge.html  history.html  index.html  predictions.html  rankings.html  ryan_message.md  top25.html  wp.html
fsbb/: __init__.py  __main__.py  db.py  parser.py  schemas.py
migrations/: 001_baseline.sql  (+12 more)
(+76 files in other folders)
