[project]
name = "fsbb"
version = "0.1.0"
description = "ForgeStream Baseball — NCAA D1 team ratings, game predictions, and accuracy tracking"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.1",
    "tabulate>=0.9",
    "jinja2>=3.1",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.scripts]
fsbb = "fsbb.__main__:cli"

[tool.setuptools.packages.find]
include = ["fsbb*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
